// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createColumnLocator creates valid group column locator for second-level group in table with column attributes 1`] = `
Array [
  Object {
    "attributeLocatorItem": Object {
      "attributeIdentifier": "a_label.stage.name.stagename",
      "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
    },
  },
  Object {
    "attributeLocatorItem": Object {
      "attributeIdentifier": "a_label.owner.region",
      "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
    },
  },
]
`;

exports[`createColumnLocator creates valid group column locator for top-level group in table with column attributes 1`] = `
Array [
  Object {
    "attributeLocatorItem": Object {
      "attributeIdentifier": "a_label.stage.name.stagename",
      "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
    },
  },
]
`;

exports[`createColumnLocator creates valid leaf column locator in table with column attributes 1`] = `
Array [
  Object {
    "attributeLocatorItem": Object {
      "attributeIdentifier": "a_label.stage.name.stagename",
      "element": "/gdc/md/referenceworkspace/obj/1091/elements?id=166498",
    },
  },
  Object {
    "attributeLocatorItem": Object {
      "attributeIdentifier": "a_label.owner.region",
      "element": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
    },
  },
  Object {
    "measureLocatorItem": Object {
      "measureIdentifier": "m_aangOxLSeztu",
    },
  },
]
`;

exports[`createColumnLocator creates valid leaf column locator in table without column attributes 1`] = `
Array [
  Object {
    "measureLocatorItem": Object {
      "measureIdentifier": "m_aangOxLSeztu",
    },
  },
]
`;
